# JurassicParkTrespasser

./: .gitmodules  AGENTS.md  README.md
Lib/GblInc/: common.hpp
android/: CMakeLists.txt
jp2_pc/: CMakeLists.txt
jp2_pc/Data/Textures/: AAlberto01t2.dds  AAlberto02t2.dds  AAlberto03t2.dds  AAlberto04t2.dds  AAlberto05t2.dds  AAlberto06t2.dds  AAlberto07t2.dds  AAlberto08t2.dds  AAlberto09t2.dds  AAlberto10t2.dds  AAlberto11t2.dds  AAlberto12t2.dds  AAlberto15t2.dds  AAlberto16t2.dds  ABrachi01t2.dds  ABrachi02t2.dds  ABrachi03t2.dds  ABrachi04t2.dds  ABrachi05t2.dds  ABrachi06t2.dds  ABrachi07t2.dds  ABrachi08t2.dds  ABrachi09t2.dds  ABrachi10t2.dds  ABrachi11t2.dds  ABrachi12t2.dds  ABrachi13t2.dds  ABrachi14t2.dds  ABrachi15t2.dds  ABrnTrex01-1t2.dds  ABrnTrex02-1t2.dds  ABrnTrex03-1t2.dds  ABrnTrex04-1t2.dds  ABrnTrex05t2.dds  ABrnTrex06t2.dds  ABrnTrex09t2.dds  ABrnTrex10t2.dds  ABrnTrex11t2.dds  ABrnTrex12t2.dds  ABrnTrex13t2.dds  (+5008 more)
jp2_pc/Data/Textures/be/: Pcallbox02t2.dds  Pcallbox03t2.dds  Pcallbox04t2.dds
jp2_pc/Data/Textures/it/: PScrtyCrdRdrGRN00t2.dds  PScrtyCrdRdrPRP00t2.dds  PSecurityNote01t2.dds  PSecurityNote02t2.dds  Ptkeycardblue01t2.dds  Ptkeycardgrn01t2.dds  desktop.ini
jp2_pc/Data/Textures/lab/: PScrtyCrdRdr02.dds  PScrtyCrdRdr04Bt2.dds  PScrtyCrdRdrBLU00t2.dds  PScrtyCrdRdrBRK00t2.dds  PScrtyCrdRdrRED00t2.dds  PScrtyCrdRdrWHT00t2.dds  PScrtyCrdRdrYLW00t2.dds  Ptkeycardpurp01t2.dds  Ptkeycardred01t2.dds  Ptkeycards03t2.dds  Ptkeycardwhte01t2.dds  Ptkeycardyllw01t2.dds
jp2_pc/Source/: BuildVer.hpp  Common.hpp  GblInc
jp2_pc/Source/GUIApp/: DialogGamma.cpp  DialogRenderCache.cpp  DialogSoundMaterial.hpp  DialogTexturePack.hpp  DialogVM.cpp  GUIApp.cpp  GUIApp.rc  GUIAppDlg.cpp  Options.cpp  QualityDialog.cpp  SoundPropertiesDlg.cpp
jp2_pc/Source/GUIApp/res/: GUIApp.rc2
jp2_pc/Source/Game/AI/: AIGraph.cpp  AIInfo.hpp  AIMain.cpp  AIMain.hpp  Activity.cpp  Activity.hpp  Brain.cpp  Brain.hpp  Graph.hpp  Influence.hpp  MoveActivities.cpp  Pathfinder.hpp  Silhouette.cpp  Synthesizer.hpp  TestActivities.cpp  WorldView.cpp
jp2_pc/Source/Game/DesignDaemon/: HitSpang.hpp  Player.cpp  Socket.cpp
jp2_pc/Source/GroffBuild/: GroffBuild.rc
jp2_pc/Source/InitGUIApp/: InitGUIApp.rc
jp2_pc/Source/InitGUIApp2/: InitGUIApp2.rc
jp2_pc/Source/Lib/Audio/: Audio.cpp  Audio.hpp  Audio.org  AudioDaemon.cpp  AudioLoad.cpp  Sample.cpp  SoundDefs.hpp  SoundTypes.hpp
jp2_pc/Source/Lib/Control/: Control.cpp  Control.hpp
jp2_pc/Source/Lib/EntityDBase/: Animate.cpp  GameLoop.cpp  Instance.cpp  Query.cpp  Replay.cpp  Teleport.cpp  TextOverlay.cpp  Water.cpp  WorldDBase.cpp
jp2_pc/Source/Lib/EntityDBase/MessageTypes/: MsgAudio.hpp  MsgPaint.hpp
jp2_pc/Source/Lib/GeomDBase/: LineSegment.hpp  Mesh.cpp  PartitionSpace.cpp  Shape.cpp  TerrainObj.hpp  TerrainTexture.cpp
jp2_pc/Source/Lib/Loader/: ImageLoader.cpp  Loader.cpp  Loader.org  PlatonicInstance.cpp  SaveFile.hpp  TexturePackSurface.cpp
jp2_pc/Source/Lib/Physics/: Xob_bc.hpp
jp2_pc/Source/Lib/Renderer/: EnvironmentModern.cpp  EnvironmentModern.hpp  EnvironmentModernStub.cpp  RenderCache.hpp  RenderType.cpp  ScreenRender.hpp  ScreenRenderAuxD3D.cpp  ScreenRenderAuxD3DBatch.cpp
jp2_pc/Source/Lib/Renderer/Primitives/AMDK6/: DrawSubTriangleAlpha.inl
jp2_pc/Source/Lib/Renderer/Primitives/P5/: DrawSubTriangleAlpha.inl
jp2_pc/Source/Lib/Sys/: MemoryLog.cpp  Profile.cpp  VirtualMem.cpp
jp2_pc/Source/Lib/Sys/W95/: Render.hpp  Timer.cpp
jp2_pc/Source/Lib/Trigger/: Action.cpp  CreatureTrigger.cpp  GameActions.hpp  LocationTrigger.cpp  Trigger.hpp  TriggerBase.cpp
jp2_pc/Source/Lib/VR/: README.md  VR.cpp  VR.hpp
jp2_pc/Source/Lib/VR/android/: VR_Android.cpp
jp2_pc/Source/Lib/View/: Palette.cpp  Raster.cpp
jp2_pc/Source/Lib/W95/: Direct3D.cpp  Direct3DQuery.cpp  Errors.rc  WinInclude.hpp
jp2_pc/Source/Shell/: WinEvent.hpp  WinShell.rc  winshell.cpp
jp2_pc/Source/Test/: AudioTest.cpp  AudioTest.rc  AudioTestDoc.cpp  AudioTestView.cpp  DDTest.rc
jp2_pc/Source/Test/AI/: AI.rc  AITest.cpp  AITest.hpp  FakePhysics.hpp  FakeShape.hpp  TestAnimal.cpp  TestAnimal.hpp  TestBrains.hpp  TestTree.hpp  UIModes.cpp
jp2_pc/Source/Test/BumpBuild/: HeightBitmap.hpp  IOStuff.hpp
jp2_pc/Source/Test/Novel/LoaderTest/: FileIOTest.cpp
jp2_pc/Source/Test/Novel/StdTest/: CSetTest.cpp
jp2_pc/Source/Test/Novel/SystemTest/: FastHeapTest.cpp  IniFileTest.cpp
jp2_pc/Source/Tools/CollisionEditor/: CollisionEditor.rc
jp2_pc/Source/Tools/GroffExp/: GroffExp.rc
jp2_pc/Source/Tools/Processor Detect/: Detect.cpp
jp2_pc/Source/Tools/QuantizerTool/: QuantizerTool.rc
jp2_pc/Source/Trespass/: dlgrender.cpp  gamewnd.cpp  gdidlgs.cpp  keyremap.cpp  main.cpp  mainwnd.cpp  saveload.cpp  supportfn.cpp  tpassglobals.cpp  trespass.rc  uidlgs.cpp  uiwnd.cpp  version.rc2  video.cpp
jp2_pc/Source/TrespassAdv/: TrespassAdv.rc
jp2_pc/Source/TweakNVidia128/: TweakNVidia128.rc
jp2_pc/Source/gblinc/: BuildVer.hpp  common.hpp
jp2_pc/cmake/AITest/: CMakeLists.txt
jp2_pc/cmake/Audio/: CMakeLists.txt
jp2_pc/cmake/AudioTest/: CMakeLists.txt
jp2_pc/cmake/EntityDBase/: CMakeLists.txt
jp2_pc/cmake/GTestLibGlobals/: CMakeLists.txt
jp2_pc/cmake/GUIApp/: CMakeLists.txt
jp2_pc/cmake/Game/: CMakeLists.txt
jp2_pc/cmake/GeomDBase/: CMakeLists.txt
jp2_pc/cmake/GroffExp/: CMakeLists.txt
jp2_pc/cmake/InitGUIApp/: CMakeLists.txt
jp2_pc/cmake/InitGUIApp2/: CMakeLists.txt
jp2_pc/cmake/Loader/: CMakeLists.txt
jp2_pc/cmake/LoaderTest/: CMakeLists.txt
jp2_pc/cmake/Math/: CMakeLists.txt
jp2_pc/cmake/Physics/: CMakeLists.txt
jp2_pc/cmake/Render3D/: CMakeLists.txt
jp2_pc/cmake/ScreenRenderDWI/: CMakeLists.txt
jp2_pc/cmake/Std/: CMakeLists.txt
jp2_pc/cmake/StdTest/: CMakeLists.txt
jp2_pc/cmake/System/: CMakeLists.txt
jp2_pc/cmake/SystemTest/: CMakeLists.txt
jp2_pc/cmake/VR/: CMakeLists.txt
jp2_pc/cmake/View/: CMakeLists.txt
jp2_pc/cmake/WinShell/: CMakeLists.txt
jp2_pc/cmake/trespass/: CMakeLists.txt
tools/: README.md  generate_textures.py
(+1 files in other folders)
